# kImageAnnotator

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md
src/: AnnotationArea.cpp  AnnotationArea.h  AnnotationToolTypes.h  AnntationArea.cpp  AnntationArea.h  CMakeLists.txt  FillTypes.h  KImageAnnotator.cpp  KImageAnnotator.h  ToolTypes.h  main.cpp
src/annotationItems/: AbstractAnnotationItem.cpp  AbstractAnnotationItem.h  AbstractAnnotationLine.cpp  AbstractAnnotationLine.h  AbstractAnnotationRect.cpp  AbstractAnnotationRect.h  AnnotationArrow.cpp  AnnotationArrow.h  AnnotationEllipse.cpp  AnnotationEllipse.h  AnnotationItemFactory.cpp  AnnotationItemFactory.h  AnnotationItemModifier.cpp  AnnotationItemModifier.h  AnnotationItemProperties.cpp  AnnotationItemProperties.h  AnnotationItemTypes.h  AnnotationLine.cpp  AnnotationLine.h  AnnotationLineItem.cpp  AnnotationLineItem.h  AnnotationNumber.cpp  AnnotationProperties.cpp  AnnotationProperties.h  AnnotationPropertiesFactory.cpp  AnnotationPropertiesFactory.h  AnnotationRect.cpp  AnnotationRect.h  AnnotationToolTypes.h  ControlPoints.cpp  ControlPoints.h
src/annotations/: AnnotationArea.cpp  AnnotationArea.h  AnnotationItemFactory.h  AnnotationItemModifier.h  AnnotationItemResizer.cpp  AnnotationItemResizer.h  AnnotationItemSelector.cpp  AnnotationItemSelector.h  AnnotationProperties.cpp  AnnotationProperties.h  AnnotationPropertiesFactory.cpp  AnnotationPropertiesFactory.h  ControlPoints.h
src/annotations/core/: AbstractBadgeNumberChangeListener.h  AbstractCamera.cpp  AbstractCamera.h  AbstractItemSettingsChangeListener.h  AbstractSettingsProvider.cpp  AbstractSettingsProvider.h  AbstractToolChangeListener.h  AnnotationArea.cpp  AnnotationArea.h  AnnotationItemFactory.cpp  AnnotationItemFactory.h  AnnotationProperties.cpp  AnnotationProperties.h  AnnotationPropertiesFactory.cpp  AnnotationPropertiesFactory.h  ISettingsListener.h  ZoomValueProvider.cpp  ZoomValueProvider.h
src/annotations/items/: AbstractAnnotationItem.cpp  AbstractAnnotationItem.h  AbstractAnnotationLine.cpp  AbstractAnnotationLine.h  (+50 more)
src/backend/: Config.cpp  Config.h  ISettings.h  SettingsAdapter.cpp  SettingsAdapter.h
src/common/: ToolTypes.h
src/gui/: AnnotationView.cpp  AnnotationView.h  AnnotationWidget.cpp  AnnotationWidget.h  ConfigWidgetVisibilitySwitcher.cpp  ConfigWidgetVisibilitySwitcher.h  CoreView.cpp  CoreView.h  CropView.cpp  CropView.h  CropWidget.cpp  CropWidget.h  KImageAnnotator.cpp  KImageAnnotator.h  VisibilitySwitcher.cpp  VisibilitySwitcher.h  WidgetVisibilitySwitcher.cpp  WidgetVisibilitySwitcher.h
src/widgets/: BoolPicker.cpp  BoolPicker.h  ColorDialogButton.cpp  ColorDialogButton.h  ColorPicker.cpp  ColorPicker.h  Controls.cpp  Controls.h  CustomFontComboBox.cpp  CustomFontComboBox.h  CustomSpinBox.cpp  CustomSpinBox.h  CustomToolButton.cpp  CustomToolButton.h  CustomToolButtonAction.cpp  CustomToolButtonAction.h  CustomToolButtonMenu.cpp  CustomToolButtonMenu.h  EffectPicker.cpp  EffectPicker.h  FillModePicker.cpp  FillModePicker.h  FillPicker.cpp  FillPicker.h  FillTypePicker.cpp  FillTypePicker.h  FontPicker.cpp  FontPicker.h  ImageEffectPicker.cpp  ImageEffectPicker.h  NumberPicker.cpp  NumberPicker.h  SizePicker.cpp  SizePicker.h  StickerPicker.cpp  StickerPicker.h  ToggleButton.cpp  ToggleButton.h  ToolPicker.cpp  ToolPicker.h  (+2 more)
tests/: AddCommandTest.cpp  AddCommandTest.h  AnnotationAreaTest.cpp  AnnotationAreaTest.h  AnnotationItemArrangerTest.h  AnnotationItemFactoryTest.h  AnnotationItemModifierTest.cpp  AnnotationItemModifierTest.h  AnnotationItemMoverTest.h  AnnotationItemResizerTest.cpp  AnnotationItemResizerTest.h  AnnotationItemSelectorTest.cpp  AnnotationItemSelectorTest.h  AnnotationMultiItemResizerTest.cpp  AnnotationMultiItemResizerTest.h  AnnotationPropertiesFactoryTest.h  CMakeLists.txt  ColorPickerTest.cpp  ColorPickerTest.h  ConfigNameFormatterTest.cpp  ConfigNameFormatterTest.h  ControlPointsTest.cpp  ControlPointsTest.h  DeleteCommandTest.cpp  DeleteCommandTest.h  FillPickerTest.cpp  FillPickerTest.h  KeyHelperTest.cpp  KeyHelperTest.h  MathHelperTest.h  ResizeHandlesTest.cpp  ResizeHandlesTest.h  SizePickerTest.cpp  SizePickerTest.h  ToolPickerTest.cpp  ToolPickerTest.h
tests/annotations/: AnnotationAreaTest.cpp  AnnotationAreaTest.h  AnnotationItemFactoryTest.cpp  AnnotationItemFactoryTest.h  AnnotationPropertiesFactoryTest.h
tests/backend/: ConfigTest.cpp  ConfigTest.h
tests/mocks/: MockCamera.cpp  MockCamera.h  MockDefaultParameters.h  MockDevicePixelRatioScaler.cpp  MockDevicePixelRatioScaler.h  MockSelectionRestrictor.cpp  MockSelectionRestrictor.h  MockSettingsProvider.cpp  MockSettingsProvider.h  MockZoomValueProvider.cpp  MockZoomValueProvider.h
tests/utils/: TestRunner.h
tests/widgets/: ColorPickerTest.h  CustomSpinBoxTest.cpp  CustomSpinBoxTest.h  FillModePickerTest.cpp  FillModePickerTest.h  FillPickerTest.cpp  FillPickerTest.h  FillTypePickerTest.cpp  FillTypePickerTest.h  ImageEffectPickerTest.cpp  ImageEffectPickerTest.h  NumberPickerTest.cpp  NumberPickerTest.h  SizePickerTest.cpp  SizePickerTest.h  StickerPickerTest.cpp  StickerPickerTest.h  ToolPickerTest.cpp  ToolPickerTest.h  ZoomIndicatorTest.cpp  ZoomIndicatorTest.h
translations/: CMakeLists.txt  kImageAnnotator_ar.ts  kImageAnnotator_bg.ts  kImageAnnotator_ca.ts  kImageAnnotator_cs.ts  kImageAnnotator_da.ts  kImageAnnotator_de.ts  kImageAnnotator_el.ts  kImageAnnotator_es.ts  kImageAnnotator_et.ts  kImageAnnotator_eu.ts  kImageAnnotator_fr.ts  kImageAnnotator_fr_CA.ts  kImageAnnotator_gl.ts  kImageAnnotator_hr.ts  kImageAnnotator_hu.ts  kImageAnnotator_id.ts  kImageAnnotator_it.ts  kImageAnnotator_ja.ts  kImageAnnotator_ko.ts  kImageAnnotator_nl.ts  kImageAnnotator_no.ts  kImageAnnotator_pl.ts  kImageAnnotator_pt.ts  kImageAnnotator_pt_BR.ts  kImageAnnotator_ro.ts  kImageAnnotator_ru.ts  kImageAnnotator_si.ts  kImageAnnotator_sq.ts  kImageAnnotator_sv.ts  kImageAnnotator_ta.ts  kImageAnnotator_tr.ts  kImageAnnotator_uk.ts  kImageAnnotator_zh_CN.ts  kImageAnnotator_zh_Hans.ts
(+479 files in other folders)
